...
            ) {

                Image(
                    modifier = Modifier
                        .size(width = 24.dp, height = 24.dp)
                        .clickable { send(HomeScreenEvent.SearchClosed) }
                        .testTag("back"),
                    painter = painterResource(id = R.drawable.ic_back),
                    contentDescription = null
                )
                Spacer(
                    modifier = Modifier
                        .width(10.dp)
                )

                BasicTextField(
                    modifier = Modifier.testTag("search_field"),
                    value = searchValue,
                    onValueChange = { input ->
                        send(HomeScreenEvent.SearchChanged(input))
                        isShowCity = input.isNotEmpty()
                    },
                    singleLine = true,
...
